crates/slopty-proto/tests/snapshots/golden__orchestration__server_caps_lan.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
20 00 00 00 03 00 00 00 00 00 00 00 00 00 00 00
00 01 03 65 6e 30 9c 76 0e 37 42 4e c0 a8 01 14
18 01 01 00
