crates/slopty-proto/tests/snapshots/golden__orchestration__server_caps_stops_at_logout.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
41 00 00 00 03 01 00 00 02 00 00 00 00 00 00 00
00 00 00 00 00 00 01 2d 72 75 6e 20 60 73 75 64
6f 20 6c 6f 67 69 6e 63 74 6c 20 65 6e 61 62 6c
65 2d 6c 69 6e 67 65 72 20 24 55 53 45 52 60 20
74 68 65 72 65
