crates/slopty-proto/tests/snapshots/golden__orchestration__server_client_restart_worker.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
15 00 00 00 01 09 00 3d 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 77
