crates/slopty-proto/tests/snapshots/golden__orchestration__server_client_wake.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 2003
expression: hex(&bytes)
---
15 00 00 00 01 08 00 1b 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 77
