crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_agent.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
67 00 00 00 03 0b 07 01 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 74 17 0b 63 6c 61 75 64 65
2d 63 6f 64 65 16 46 69 78 20 74 68 65 20 6c 6f
67 69 6e 20 72 65 64 69 72 65 63 74 05 03 01 08
71 75 65 73 74 69 6f 6e 0d 57 68 69 63 68 20 62
72 61 6e 63 68 3f 01 0d 57 68 69 63 68 20 62 72
61 6e 63 68 3f f0 89 c1 a2 8c 34
