crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_conversation.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 2049
expression: hex(&bytes)
---
89 00 00 00 02 08 12 02 00 00 29 01 02 61 31 01
01 02 74 31 01 07 45 78 70 6c 6f 72 65 00 03 00
01 02 75 31 07 00 06 66 69 78 20 69 74 01 07 00
00 00 28 29 29 01 01 31 05 42 75 69 6c 64 0b 69
6e 5f 70 72 6f 67 72 65 73 73 01 01 04 4f 70 75
73 00 00 00 00 00 00 01 10 01 02 03 04 05 06 07
08 09 0a 0b 0c 0d 0e 0f 10 03 04 42 61 73 68 0f
02 7b 7d 01 07 00 00 01 07 64 65 66 61 75 6c 74
00 80 d8 c1 a2 8c 34 b8 80 e6 a2 8c 34
