crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_dir.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
11 00 00 00 02 08 0d 01 03 73 72 63 01 60 80 d8
c1 a2 8c 34 02
