crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_events.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
4b 00 00 00 03 09 0e 01 29 80 d8 c1 a2 8c 34 04
10 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
77 10 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e
0f 10 00 04 01 00 01 0d 57 68 69 63 68 20 62 72
61 6e 63 68 3f 01 03 f0 89 c1 a2 8c 34 2a 00
