crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_file.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
0a 00 00 00 02 08 09 02 68 69 80 20 80 40
