crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_interrupted.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
05 00 00 00 02 08 0b 07 00
