crates/slopty-proto/tests/snapshots/golden__orchestration__server_reply_item.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
25 00 00 00 02 08 10 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 77 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 17 e5
